--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Project Balance</title>
+    <title>Project Balance - Welcome</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,21 +30,38 @@
             border: none;
             cursor: pointer;
             border-radius: 4px;
+            margin-right: 10px;
         }
         .button:hover {
             background-color: #555;
         }
+        .input-box {
+            display: none;
+        }
     </style>
+    <script>
+        function showInputBox() {
+            var password = prompt("Enter the password:");
+            if (password === "2lv's2f8") {
+                document.getElementById("contribute-input").style.display = "block";
+            }
+        }
+    </script>
 </head>
 <body>
     <div class="header">
         <h1>Project Balance</h1>
-        <p>Your One-Stop Solution for Project Management</p>
+        <p>Your Solution for Utilizing Leftover Food</p>
     </div>
     <div class="container">
         <h2>Welcome to Project Balance</h2>
-        <p>Track, manage, and balance your projects with ease.</p>
-        <button class="button">Learn More</button>
+        <p>Join us in making a difference by contributing leftover food to those in need.</p>
+        <button class="button" onclick="showInputBox()">Contribute</button>
+        <div class="input-box" id="contribute-input">
+            <input type="password" id="password" placeholder="Enter Password">
+            <button class="button">Continue</button>
+        </div>
+        <button class="button">Balance</button>
     </div>
 </body>
 </html>
