--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-
-
-
 <html>
 <head>
     <title>GitHub Comments</title>
 </head>
 <body>
-    <h1>Leave Comment</h1>
+    <h1>Leave Comments</h1>
     <form id="commentForm">
         <textarea id="commentText" rows="4" cols="50" placeholder="Enter your comment"></textarea>
         <br>
